# autotools-project

./: .gitignore  .gitmodules  Makefile.am  README.md  configure.ac
include/: Makefile.am  autotools-project.h
src/: lib.c  main.c
